W3C HTML validator check

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -82,8 +82,8 @@
                                         </ul>
                                     </li>
                                     <li><label>Immobilier</label></li>
-                                    <li><label">Mode</label></li>
-                                    <li><label">Maison</label></li>
+                                    <li><label>Mode</label></li>
+                                    <li><label>Maison</label></li>
                                     <li><label>Multimédia</label></li>
                                     <li><label>Loisirs</label></li>
                                     <li><label>Animaux</label></li>
@@ -135,7 +135,7 @@
                         <div class="ad-number ad-inline">Annonces : <span>45 408 262</span></div>
                         <div class="ad-inline checkbox-css">
                             <label> 
-                                <input type="checkbox" id="private" value="private" class="css-checkbox"checked> Particuliers <span>43 235 031</span>
+                                <input type="checkbox" id="private" value="private" class="css-checkbox" checked> Particuliers <span>43 235 031</span>
                             </label>
                         </div>
 
@@ -163,7 +163,7 @@
                     <article>
                         <img src="img/sales/mercedes.jpg" alt="Mercedes">
                         <div class="description">
-                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <h2><a href="#">Mercedes classe B 180 CDI</a></h2>
                             <p class="price-ad"><span>11 900€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -176,7 +176,7 @@
                     <article>
                         <img src="img/sales/ford.jpg" alt="Ford">
                         <div class="description">
-                            <a href="#">Ford fiesta diesel</a>
+                            <h2><a href="#">Ford fiesta diesel</a></h2>
                             <p class="price-ad"><span>7 500€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -189,7 +189,7 @@
                     <article>
                         <img src="img/sales/moto.jpg" alt="Moto">
                         <div class="description">
-                            <a href="#">103 vogue</a>
+                            <h2><a href="#">103 vogue</a></h2>
                             <p class="price-ad"><span>350€</span></p>
                             <div class="details">
                                 <p>Motos</p>
@@ -202,7 +202,7 @@
                     <article>
                         <img src="img/sales/laguna.jpg" alt="Laguna">
                         <div class="description">
-                            <a href="#">Laguna 1.9dci</a>
+                            <h2><a href="#">Laguna 1.9dci</a></h2>
                             <p class="price-ad"><span>1 800€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -215,7 +215,7 @@
                     <article>
                         <img src="img/sales/mercedes.jpg" alt="Mercedes">
                         <div class="description">
-                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <h2><a href="#">Mercedes classe B 180 CDI</a></h2>
                             <p class="price-ad"><span>11 900€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -228,7 +228,7 @@
                     <article>
                         <img src="img/sales/ford.jpg" alt="Ford">
                         <div class="description">
-                            <a href="#">Ford fiesta diesel</a>
+                            <h2><a href="#">Ford fiesta diesel</a></h2>
                             <p class="price-ad"><span>7 500€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -241,7 +241,7 @@
                     <article>
                         <img src="img/sales/moto.jpg" alt="Moto">
                         <div class="description">
-                            <a href="#">103 vogue</a>
+                            <h2><a href="#">103 vogue</a></h2>
                             <p class="price-ad"><span>350€</span></p>
                             <div class="details">
                                 <p>Motos</p>
@@ -254,7 +254,7 @@
                     <article>
                         <img src="img/sales/laguna.jpg" alt="Laguna">
                         <div class="description">
-                            <a href="#">Laguna 1.9dci</a>
+                            <h2><a href="#">Laguna 1.9dci</a></h2>
                             <p class="price-ad"><span>1 800€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -267,7 +267,7 @@
                     <article>
                         <img src="img/sales/mercedes.jpg" alt="Mercedes">
                         <div class="description">
-                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <h2><a href="#">Mercedes classe B 180 CDI</a></h2>
                             <p class="price-ad"><span>11 900€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -280,7 +280,7 @@
                     <article>
                         <img src="img/sales/ford.jpg" alt="Ford">
                         <div class="description">
-                            <a href="#">Ford fiesta diesel</a>
+                            <h2><a href="#">Ford fiesta diesel</a></h2>
                             <p class="price-ad"><span>7 500€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -293,7 +293,7 @@
                     <article>
                         <img src="img/sales/moto.jpg" alt="Moto">
                         <div class="description">
-                            <a href="#">103 vogue</a>
+                            <h2><a href="#">103 vogue</a></h2>
                             <p class="price-ad"><span>350€</span></p>
                             <div class="details">
                                 <p>Motos</p>
@@ -306,7 +306,7 @@
                     <article>
                         <img src="img/sales/laguna.jpg" alt="Laguna">
                         <div class="description">
-                            <a href="#">Laguna 1.9dci</a>
+                            <h2><a href="#">Laguna 1.9dci</a></h2>
                             <p class="price-ad"><span>1 800€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -319,7 +319,7 @@
                     <article>
                         <img src="img/sales/mercedes.jpg" alt="Mercedes">
                         <div class="description">
-                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <h2><a href="#">Mercedes classe B 180 CDI</a></h2>
                             <p class="price-ad"><span>11 900€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -332,7 +332,7 @@
                     <article>
                         <img src="img/sales/ford.jpg" alt="Ford">
                         <div class="description">
-                            <a href="#">Ford fiesta diesel</a>
+                            <h2><a href="#">Ford fiesta diesel</a></h2>
                             <p class="price-ad"><span>7 500€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -345,7 +345,7 @@
                     <article>
                         <img src="img/sales/moto.jpg" alt="Moto">
                         <div class="description">
-                            <a href="#">103 vogue</a>
+                            <h2><a href="#">103 vogue</a></h2>
                             <p class="price-ad"><span>350€</span></p>
                             <div class="details">
                                 <p>Motos</p>
@@ -358,7 +358,7 @@
                     <article>
                         <img src="img/sales/laguna.jpg" alt="Laguna">
                         <div class="description">
-                            <a href="#">Laguna 1.9dci</a>
+                            <h2><a href="#">Laguna 1.9dci</a></h2>
                             <p class="price-ad"><span>1 800€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -369,12 +369,12 @@
                         </div> 
                     </article>
                     <div class="blank"></div>
-                    <button>
+                    <div class="save-button">
                         <img src="img/white-bell.svg" alt="My savings">
                         <div class="save-search-section">
                             Sauvegarder la recherche
                         </div>
-                    </button>
+                    </div>
                     <div class="pagination">
                         <div class="page-number">
                             <a href="#">&lt;</a>
@@ -395,7 +395,7 @@
                     <article>
                         <img src="img/sales/nissan.jpg" alt="Nissan">
                         <div class="description">
-                            <a href="#">NISSAN Qashqai II 1.6 dCi 130ch N-Connecta Xtronic</a>
+                            <h2><a href="#">NISSAN Qashqai II 1.6 dCi 130ch N-Connecta Xtronic</a></h2>
                             <p class="price-ad"><span>21 900€</span></p>
                             <div class="details">
                                 <p>Voitures</p>
@@ -409,7 +409,7 @@
                     <article>
                         <img src="img/sales/studio-flat.jpg" alt="Studio">
                         <div class="description">
-                            <a href="#">Location studio T1 bis meublé</a>
+                            <h2><a href="#">Location studio T1 bis meublé</a></h2>
                             <p class="price-ad"><span>690€</span></p>
                             <div class="details">
                                 <p>Locations</p>
@@ -423,7 +423,7 @@
                     <article>
                         <img src="img/sales/maison.jpg" alt="Maison">
                         <div class="description">
-                            <a href="#">Maison 9 pièces 176 m²</a>
+                            <h2><a href="#">Maison 9 pièces 176 m²</a></h2>
                             <p class="price-ad"><span>395 000€</span></p>
                             <div class="details">
                                 <p>Ventes Immobilières</p>
